@@ -19,6 +19,7 @@ import errno
 import log
 import misc
 import os
+import re
 import select
 import shutil
 import signal
@@ -240,13 +241,7 @@ def find(s, subs, start=0):
     return (ret, found)
 
 def literalRegex(s):
-    "escape all regex magic characters in s"
-    l = []
-    for character in s:
-        if character in '+*[].&^$+{}()\\':
-            l.append('\\')
-        l.append(character)
-    return ''.join(l)
+    return re.escape(s)
 
 
 # shutil module extensions, with {}-expansion and globbing
